syntax = "proto3";
package kratos.api;

option go_package = "internal/config;config";

import "google/protobuf/duration.proto";
import "validate/validate.proto";

message Bootstrap {
  string service_name = 1 [json_name = "service_name"];
  string version = 2 [json_name = "version"];
  string crypto_type = 3 [json_name = "crypto_type"];
  Server server = 5 [json_name = "server"];
  Data data = 6 [json_name = "data"];
  Settings settings = 7 [json_name = "settings"];
  Discovery discovery = 8 [json_name = "discovery"];
  string id = 99 ;
}


message Discovery {
  string type = 1 [(validate.rules).string = {in: ["none", "consul", "etcd"]}];
  optional Consul consul = 2;
  optional Etcd etcd = 3;
}

message Consul {
  string address = 1 [json_name = "address"];
  string scheme = 2 [json_name = "scheme"];
  string token = 3 [json_name = "token"];
  bool heart_beat = 4 [json_name = "heart_beat"];
  bool health_check = 5 [json_name = "health_check"];
  string datacenter = 6 [json_name = "datacenter"];
  string tag = 7 [json_name = "tag"];
  string health_check_interval = 8 [json_name = "health_check_interval"];
  string health_check_timeout = 9[json_name = "health_check_timeout"];
}

message Etcd {
  string endpoints = 1 [json_name = "endpoints"];
  string username = 2 [json_name = "username"];
  string password = 3 [json_name = "password"];
}

message Server {
  message GINS {
    string network = 1;
    string addr = 2;
    bool use_tls = 3 [json_name = "use_tls"];
    string cert_file = 4 [json_name = "cert_file"];
    string key_file = 5 [json_name = "key_file"];
    optional google.protobuf.Duration timeout = 6 [json_name = "timeout"];
    optional google.protobuf.Duration shutdown_timeout = 7 [json_name = "shutdown_timeout"];
    optional google.protobuf.Duration read_timeout = 8 [json_name = "read_timeout"];
    optional google.protobuf.Duration write_timeout = 9 [json_name = "write_timeout"];
    optional google.protobuf.Duration idle_timeout = 10 [json_name = "idle_timeout"];
  }

  message HTTP {
    string network = 1;
    string addr = 2;
    bool use_tls = 3 [json_name = "use_tls"];
    string cert_file = 4 [json_name = "cert_file"];
    string key_file = 5 [json_name = "key_file"];
    google.protobuf.Duration timeout = 6 [json_name = "timeout"];
    google.protobuf.Duration shutdown_timeout = 7 [json_name = "shutdown_timeout"];
    google.protobuf.Duration read_timeout = 8 [json_name = "read_timeout"];
    google.protobuf.Duration write_timeout = 9 [json_name = "write_timeout"];
    google.protobuf.Duration idle_timeout = 10 [json_name = "idle_timeout"];
  }

  message GRPC {
    string network = 1;
    string addr = 2;
    bool use_tls = 3 [json_name = "use_tls"];
    string cert_file = 4 [json_name = "cert_file"];
    string key_file = 5 [json_name = "key_file"];
    optional google.protobuf.Duration timeout = 6 [json_name = "timeout"];
    optional google.protobuf.Duration shutdown_timeout = 7 [json_name = "shutdown_timeout"];
    optional google.protobuf.Duration read_timeout = 8 [json_name = "read_timeout"];
    optional google.protobuf.Duration write_timeout = 9 [json_name = "write_timeout"];
    optional google.protobuf.Duration idle_timeout = 10 [json_name = "idle_timeout"];
  }

  message Middleware {
    message Metrics {
      bool enabled = 1;
      string name = 2;
    }

    message Traces {
      bool enabled = 1;
      string name = 2;
    }

    message Logger {
      bool enabled = 1;
      string name = 2;
    }

    message Cors {
      bool enabled = 1;
      bool allow_all_origins = 2 [json_name = "allow_all_origins"];
      repeated string allow_origins = 3 [json_name = "allow_origins"];
      repeated string allow_methods = 4 [json_name = "allow_methods"];
      repeated string allow_headers = 5 [json_name = "allow_headers"];
      bool allow_credentials = 6 [json_name = "allow_credentials"];
      repeated string expose_headers = 7 [json_name = "expose_headers"];
      int32 max_age = 8 [json_name = "max_age"];
      bool allow_wildcard = 9 [json_name = "allow_wildcard"];
      bool allow_browser_extensions = 10 [json_name = "allow_browser_extensions"];
      bool allow_web_sockets = 11 [json_name = "allow_web_sockets"];
      bool allow_files = 12 [json_name = "allow_files"];
    }

    Cors cors = 1 [json_name = "cors"];
    Metrics metrics = 2 [json_name = "metrics"];
    Traces traces = 3 [json_name = "traces"];
    Logger logger = 4 [json_name = "logger"];
  }

  GINS gins = 1 [json_name = "gins"];
  HTTP http = 2 [json_name = "http"];
  GRPC grpc = 3 [json_name = "grpc"];
  Middleware middleware = 4 [json_name = "middleware"];

}

message Settings {
  string crypto_type = 1 [json_name = "crypto_type"];
}

message Data {
  message Database {
    string driver = 1 [json_name = "driver"];
    string source = 2 [json_name = "source"];
  }
  message Redis {
    string network = 1 [json_name = "network"];
    string addr = 2 [json_name = "addr"];
    google.protobuf.Duration read_timeout = 3 [json_name = "read_timeout"];
    google.protobuf.Duration write_timeout = 4 [json_name = "write_timeout"];
  }
  Database database = 1 [json_name = "database"];
  Redis redis = 2 [json_name = "redis"];
}
